<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_location_text"
        android:textSize="30sp"
        android:padding="10dp"
        android:textColor="#fff"
        android:background="@color/colorAccent"
        android:textAlignment="center"
        android:height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:hint="@string/enter_latitude_text"
        android:id="@+id/enterLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />
    <EditText
        android:hint="@string/enter_longitude_text"
        android:id="@+id/enterLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterLatitude" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_buttom"
        android:text="@string/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/enterLongitude"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        app:layout_constraintRight_toLeftOf="@id/confirm_buttom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:id="@+id/confirm_buttom"
        android:text="@string/confirm_button"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/enterLongitude"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>